# TKO

./: .env.example  .gitignore  README.md  TODO  docker-compose.build.yml  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
services/backend/: pyproject.toml
services/backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
services/backend/scripts/: entrypoint.sh  run-dev.sh  run.sh
services/backend/shop/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
services/backend/shop/migrations/: 0001_initial.py
services/backend/tko/: admin.py  apps.py  models.py  serializers.py  views.py  wagtail_hooks.py
services/backend/tko/migrations/: 0001_initial.py  0002_article_image.py  0003_rename_first_name_contact_name_and_more.py  0004_alter_article_image.py  0005_alter_article_date_articlepage.py  0005_remove_article_image_alter_article_date_articleimage.py  0006_eventpage_remove_articlepage_active_to_and_more.py  0006_remove_articleimage_is_main_article_image_and_more.py  0007_remove_article_image_articleimage_main_and_more.py
services/backend/tko/tests/: factories.py  test_admin.py  test_article.py  test_contact.py  test_event.py  test_gallery.py
services/frontend/: nuxt.config.ts  package-lock.json  package.json
services/frontend/components/: About.vue  Advantages.vue  Calendar.vue  ContactUs.vue  Courses.vue  Gallery.vue  History.vue  News.vue  References.vue  Trainers.vue
services/frontend/composables/: useAPI.ts  useGoTo.ts
services/frontend/layouts/: default.vue
services/frontend/pages/: aktuality.vue  (+5 more)
(+7 files in other folders)
